--- a/index.html
+++ b/index.html
@@ -370,13 +370,13 @@ inquiry部のpタグが黒くなってしまっている
                     <h2>オンラインショップ</h2>
                     <div class="smonlineshopcategory1">
                         <a href="">-　TrustEleShop
-                            <img src="/archive-column/archive-img/web.png" alt="web" width="13px"
+                            <img src="./archive-img/web.png" alt="web" width="13px"
                                 height="11px" />
                         </a>
                     </div>
                     <div class="smonlineshopcategory2">
                         <a href="">-　Amazon.jp
-                            <img src="/archive-column/archive-img/web.png" alt="web" width="13px"
+                            <img src="./archive-img/web.png" alt="web" width="13px"
                                 height="11px" />
                         </a>
                     </div>
@@ -421,6 +421,6 @@ inquiry部のpタグが黒くなってしまっている
             </div>
         </div>
     </div>
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
